Add logging initialization